src/components/Container/Container.module.css
.container {
    background-color: var(--teal);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    width: 80%;
    height: 80vh;
    margin: 3rem auto;
    box-shadow: var(--box-shadow);
    border-radius: var(--border-radius);
}

.main {
    background-color: var(--white);
    padding: 3rem;
    box-shadow: var(--box-shadow);
    border-radius: var(--border-radius);
    height: 100%;
    width: 100%;
    display: flex;
}

@media (max-width: 768px) {
    .container {
        width: 90%;
        padding: 1rem;
    }

    .main {
        flex-direction: column;
        gap: 1rem;
        justify-content: center;
        padding: 0;
    }
}

